# 252602-Szabo_Zsolt

./: .gitignore  README.md
Elso_Beadando/: CMakeLists.txt  Elso_Beadando.slnx  Elso_Beadando.vcxproj  Elso_Beadando.vcxproj.filters  Source.cpp  fragmentShader.glsl  vertexShader.glsl
Elso_Beadando/Elso_Beadando/x64/Debug/: Elso_Beadando.exe.recipe  Elso_Beadando.ilk  vc145.idb
Elso_Beadando/Elso_Beadando/x64/Debug/Elso_Beadando.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Elso_Beadando.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Elso_Beadando/Elso_Beadando/x64/Release/: Elso_Beadando.exe.recipe  Elso_Beadando.iobj  Elso_Beadando.ipdb
Elso_Beadando/Elso_Beadando/x64/Release/Elso_Beadando.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Elso_Beadando.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Harmadik_Beadando/: Harmadik_Beadando.slnx  Harmadik_Beadando.vcxproj  Harmadik_Beadando.vcxproj.filters  Source.cpp  fragmentShader.glsl  vertexShader.glsl
Masodik_Beadando/: CMakeLists.txt  Masodik_Beadando.slnx  Masodik_Beadando.vcxproj  Source.cpp  fragmentShader.glsl  vertexShader.glsl
Masodik_Beadando/Masodik_Beadando/x64/Debug/: Masodik_Beadando.ilk
